--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -31,7 +31,7 @@ nav{
   position: relative;
   display: flex;
   justify-content: space-between;
-  font-size: 1.2rem;
+  font-size: 1.1em;
   font-weight: 700;
   transition: 0.3s ease-in-out;
   color: black;
@@ -102,8 +102,9 @@ nav{
 .propButton{
   background: transparent;
   border: none;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 700;
+  margin-right: 10px;
   transition: 0.3s ease-in-out;
 }
 
