--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -41,9 +41,11 @@ nav{
 
 
 .button{
-  padding: 10px 2px 10px 2px;
+  padding: 10px 5px 10px 5px;
   font-weight: 600;
   color: var(--black);
+  font-size: 1.1em;
+  font-weight: 700;
   background-color:#D2691E;
   border: none;
   border-radius: 4px;
@@ -52,6 +54,7 @@ nav{
 
 .button:hover{
   background-color: black;
+  color: #D2691E;
 }
 
 #navbar li a:hover{
