--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -1,3 +1,30 @@
 .home{
-  margin-top: 5rem;
+  margin-top: 20rem;
+}
+
+
+.home .background-image{
+  position: relative;
+  top: -21rem;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -2;
+  margin-bottom: 1rem;
+}
+
+.home .background-overlay{
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.187),
+    rgba(255, 255, 255, 0.185)
+  );
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 109vh;
+  object-fit: cover;
+  margin-bottom: -30px;
+  z-index: -1;
 }
